frontend/src/components/Myapp.module.css
* {
    color: var(--text-color-primary);
}

.appShell {
    height: 100dvh;
    overflow-y: auto;
}

/* Header */
.header {
    position: sticky;
    top: 0;
    background-color: var(--header-background-color);
    display: flex;
    flex-direction: column;
    gap: var(--header-gap-between-rows);
}

.appHeader {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: var(--app-header-padding);
}

.appHeaderLeft {
    display: flex;
    gap: var(--gap-between-hamburger-and-month-name);
    align-items: center;
}

.hamburger {
    width: 24px;
    gap: 3px;
    display: flex;
    flex-direction: column;
    cursor: pointer;
}

.hamburger > div {
    width: 100%;
    height: 2px;
    background: var(--text-color-primary);
}

.monthArrow {
    display: flex;
    gap: var(--gap-between-month-name-and-arrow);
    align-items: center;
}

.arrow {
    height: var(--arrow-size);
    width: var(--arrow-size);
    transform: rotate(90deg);
    transition: transform 0.2s ease;
}

.arrowExpanded {
    transform: rotate(-90deg);
    transition: transform 0.2s ease;
}

.arrow polygon {
    fill: var(--text-color-primary);
}

.pfp {
    height: var(--pfp-size);
    width: var(--pfp-size);
    border-radius: 50%;
    margin-right: var(--pfp-right-margin);
}

.entityLabelRowExpanded {
    background-color: var(--body-background-color);
    padding-top: 8px;
}

.dayHeaderContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 2px;
    margin-bottom: 10px;
}

.dayHeaderWeekDay {
    color: var(--text-color-secondary);
    font-size: var(--font-size-day-of-week-entity-label-header);
}

.dayHeaderDay {
    font-size: var(--font-size-day-number-entity-label-header);
}

/* Body (after header) */
.entityLabelRow,
.entityRow {
    display: grid;
    grid-template-columns: var(--label-column-width) repeat(var(--num-entity-columns), 1fr);
    /* border: solid #333638 3px; */
}

.entityRow {
    height: 200px;
}

.cell {
    border-right: 2px solid var(--grid-line-color);
    border-top: 2px solid var(--grid-line-color);
    display: flex;
    align-items: center;
    justify-content: center;
}

.entityLabelRow > .cell:last-child,
.entityRow > .cell:last-child {
    border-right: none;
}

